css/index.css
html{
  background: url(../back1.jpeg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100%;
  overflow: hidden;
}
body {
    margin: 0;
    color: white;
}

#logo {
    border: 3px solid #e96232;
    border-radius: 50%;
    color: #e96232;
    font-family: "Love Ya Like A Sister";
    width: 50px;
    height: 50px;
    line-height:50px;
    text-align: center;
    font-weight: bold;
}

header {
    padding: 15px 30px 70px 30px;
    border-bottom: 2px solid #e96232;
}

#logo-link {
    text-decoration: none;
}

#name-in-header {
    color: white;
    text-decoration: none;
    font-family: "Lobster";
}

.nav-item1 {
    float: left;
}

.nav-item2 {
    text-align: center;
    padding-left: 2%;
    font-size: 30px;
    float: left;
    line-height: 2;
}

.nav-item3{
    width: 237px;
    float: right;
    font-size: 20px;
    line-height: 2;
}

.nav-item3 a{
    padding-right: 20px;
}

.menu-links {
    width: 25%;
    margin: 0;
    text-decoration: none;
    color: white; /*63AA9C*/
    font-family: "Lobster";
}

#two:hover ~ hr {
  margin-left: 30%;
  width: 26%;
}

#three:hover ~ hr {
  margin-left: 66%;
  width: 24%;
}

hr {
  height: .15rem;
  width: 20%;
  margin: 0;
  background: #e96232;
  border: none;
  transition: .3s ease-in-out;
}

.text-appear{
    font-size: calc(10px + 2vw);
    text-align: center;
    font-family: monospace;
    letter-spacing: .15em;
    margin: 8% auto 3% auto;
    overflow: hidden;
    white-space: nowrap;
    animation: typing 4s steps(40, end);
}

#skills{
    margin: 10% 0 0 3%;
    display: none;
    color: white;
}

.hd1{
    font-size: calc(8px + 1.3vw);
}

.hd2{
    margin-top: 2%;
    font-size: calc(6px + 1vw);
    width: 70%;
}

@keyframes shine {
    0% {
        transform: skewY(-45deg) translateX(0);
    }
    100% {
        transform: skewY(-45deg) translateX(12.5em);
    }
}

#know-more {
  bottom: 0;
  font-size: calc(10px + 1vw);
  font-family: monospace;
  margin-left: 45%;
  margin-bottom: 2%;
  position: absolute;
  transform: translate(-50%, -50%);
}

#know-more a{
  color: #e96232;
  text-decoration: none;
  padding: 0.5em 0.75em;
  text-align: center;
  border: 2px solid #e96232;
  display: block;
  border-radius: 0.3em;
  transition: all 0.2s ease-in-out;
  position: relative;
  overflow: hidden;
}

#know-more a:before{
    content: "";
    background-color: rgba(255,255,255,0.5);
    height: 100%;
    width: 2em;
    position: absolute;
    top: 0;
    left: -4.5em;
    transform: skewX(-45deg) translateX(0);
    transition: none;
}

#know-more a:hover{
    background-color: #e96232;
    color: #fff;
    border-bottom: 4px solid darken(#e96232, 10%);
}
#know-more a:hover:before{
    transform: skewX(-45deg) translateX(13.5em);
    transition: all 0.5s ease-in-out;
}

@keyframes typing {
    from {width: 0}
    to {width: 100%}
}

@media screen and (max-width: 720px) {
    header {
        padding: 15px 10px 50px 10px;
    }
    .nav-item2 {
        line-height: 2;
        font-size: 20px;
    }
    .nav-item3{
        display: none;
    }
    #logo {
    width: 30px;
    height: 30px;
    line-height: 30px;
    font-size: 13px;
    }
    .text-appear{
      margin: 20% auto 3% auto;
    }
    #know-more a{
      border: 1px solid #e96232;
    }
}
@media screen and (max-width: 20em){
    .text-appear{
      margin-top: 40%;
    }
    #know-more a{
      padding: 2em 1.75em;
    }
}

